--- a/Mypage/style.css
+++ b/Mypage/style.css
@@ -67,6 +67,7 @@ textarea {
   font-size: 30px;
   font-weight: 700;
   color: #111;
+  text-decoration: none;
 }
 
 
@@ -89,8 +90,7 @@ textarea {
   padding: 12px;
   border-radius: 12px;
   transition: background-color 0.3s;
-  /* 배경색 전환 효과 */
-  /* cursor: pointer; */
+  text-decoration: none;
 }
 
 .menu-item:hover {
