--- a/Mypage/applycard.css
+++ b/Mypage/applycard.css
@@ -1,3 +1,5 @@
+/* 지원현황 및 현재 활동 요약 탭에 대한 css */
+
 .wrapper {
     display: flex;
     gap: 40px;
@@ -40,3 +42,9 @@
     font-size: 13px;
     color: #555;
   }
+
+
+  /* 지원현황 탭 눌렀을때 뜰 패널에 대한 css */
+
+  
+  
