--- a/dong/css/header.css
+++ b/dong/css/header.css
@@ -138,7 +138,7 @@ footer {
   color: #333;
   border-top: 1px solid #c3d3e6;
   width: 100%;
-  margin-top: auto;
+  margin-top: 80px;
 }
 
 .footer-container {
